13808 sharemgr: variable may be used uninitialized

cc1: warnings being treated as errors
../commands.c: In function 'chk_opt':
../commands.c:719: error: 'ret' may be used uninitialized in this function [-Wuninitialized]
../commands.c: In function 'sa_removeshare':
../commands.c:3011: error: 'group' may be used uninitialized in this function [-Wuninitialized]
../commands.c:3017: error: 'auth' may be used uninitialized in this function [-Wuninitialized]
../commands.c: In function 'sa_set_share':
../commands.c:3278: error: 'newrsrc' may be used uninitialized in this function [-Wuninitialized]
../commands.c: In function 'sa_show':
../commands.c:2301: error: 'doc' may be used uninitialized in this function [-Wuninitialized]
*** Error code 1

../commands.c: In function 'sa_set_share':
../commands.c:3502:18: error: 'auth' may be used uninitialized in this function
[-Werror=maybe-uninitialized]
    if (dryrun && !auth && verbose) {
                  ^~~~~
cc1: all warnings being treated as errors

Change-Id: Iedcdb2b641444db44b73d965eba86ffc9e098594